# LanaAI

./: README.md  bot_strategy.py  customdata.py  main.py  mystrategy.py  setup.cfg
