[metadata]
name = LanaAI-test
version = 1.0
description = 
long_description = file: README.md
long_description_content_type = text/markdown
url = 
author = Christian Salvaje
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3

[options]
include_package_data = true
packages = lanaai_test
setup_requires =
    wheel
[options.entry_points]
console_scripts =
    lanaai-test=lanaai_test:main
